<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/details"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/TITLE_credit"
        android:id="@+id/title"
        android:gravity="left"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        style="@style/sectionHeaderNoCaps"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:text="@string/credit_placeholder"
        android:id="@+id/credit"
        android:textSize="28sp"
        android:layout_below="@+id/title"
        android:gravity="left|center_vertical"
        android:textColor="#616161" />

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/topup"
        android:src="@drawable/ic_topup_inline"
        android:scaleType="center"
        android:cropToPadding="false"
        android:layout_alignTop="@+id/credit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/credit"
        android:contentDescription="@string/credit_topup_title" />

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/refresh"
        android:src="@drawable/ic_refresh_inline"
        android:scaleType="center"
        android:cropToPadding="false"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/topup"
        android:contentDescription="@string/CREDIT_update" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignTop="@+id/credit"
        android:layout_alignLeft="@+id/refresh"
        android:layout_alignStart="@+id/refresh"
        android:layout_alignParentBottom="false"
        android:layout_alignBottom="@+id/refresh"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />


</RelativeLayout>