<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/camp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/campus"
            android:animateLayoutChanges="true">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />

            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:id="@+id/image"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="Academiegebouw"
                android:id="@+id/location"
                android:layout_alignBottom="@+id/image"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textSize="34sp"
                android:textColor="@color/white"
                android:shadowColor="#7F000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="1.5"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:text="@string/TITLE_locations"
                android:drawableLeft="@drawable/ic_map_inline"
                android:id="@+id/locations"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_below="@+id/image"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="#424242"
                android:layout_marginTop="8dp" />

            <View style="@style/Divider"
                android:layout_alignTop="@+id/persons"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />


            <Button
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:text="@string/TITLE_people"
                android:drawableLeft="@drawable/ic_person_inline"
                android:id="@+id/persons"
                android:layout_below="@+id/locations"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:background="?android:attr/selectableItemBackground"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="#424242" />

            <View style="@style/Divider"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_alignBottom="@+id/persons" />


            <Button
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:text="@string/MENU_computers"
                android:drawableLeft="@drawable/ic_desktop_inline"
                android:id="@+id/computers"
                android:layout_below="@+id/persons"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:background="?android:attr/selectableItemBackground"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="#424242" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>